Fixed bug #30791 (magic methods (__sleep/__wakeup/__toString) call __call if object is overloaded)