ext/standard/var_unserializer.c
@@ -325,7 +325,8 @@ static inline int object_common2(UNSERIALIZE_PARAMETER, long elements)
 		return 0;
 	}
 
-	if(Z_OBJCE_PP(rval) != PHP_IC_ENTRY) {
+	if (Z_OBJCE_PP(rval) != PHP_IC_ENTRY &&
+	    zend_hash_exists(&Z_OBJCE_PP(rval)->function_table, "__wakeup", sizeof("__wakeup"))) {
 		INIT_PZVAL(&fname);
 		ZVAL_STRINGL(&fname, "__wakeup", sizeof("__wakeup") - 1, 0);
 		call_user_function_ex(CG(function_table), rval, &fname, &retval_ptr, 0, 0, 1, NULL TSRMLS_CC);
